welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: ';' expected but 'else' found.
			else return false
                        ^SnakeBuggle:18: error: ';' expected but 'else' found.
			else return false
                        ^SnakeBuggle:30: error: ';' expected but 'else' found.
			else if(getDirection() == Direction.OUEST)
                        ^